Release 1.8

#43 upgrade to Jersey 2.12, jackson 2.4.2
#46 Sencha: update objects order is important on bulk updates
#48 Support for implicit propagated ids on create/update
#49 IRelationshipMapper should use relationship name by default

Release 1.7 2014-09-05

#29 Batch lookup of relationship objects.
#38 'idempotentFullSync' method to synchronize collections
#40 Optionally suppress entity bodies on update requests
#41 rename CreateOrUpdateBuilder to just UpdateBuilder

Release 1.6 2014-08-29

#36 StackOverflow on compiling circular constraint annotations
#37 Redesign default constraints as EntityConstraint's

Release 1.5 2014-08-28

#9 Chatty merging of config
#30 Add type generic parameter to TreeConstraint
#31 Customizable request chain
#32 Support for default per-entity constraints
#33 EncoderService: Do not include related_id property by default
#34 Remove @AnyRole annotation
#35 Annotations for default constraints

Release 1.4 2014-08-22

#25 forSelectRelated/constraints causes unqualified fetch ; 
#26 Refactor delete operation to DeleteBuilder with "delete by id" and "delete by parent" options.
#27 ID that is not a PK can't be used in idempotent requests
	Refactor 'forSelectRelated' to be setup inside SelectBuilder 

Release 1.3 2014-08-20

#7 Allow TreeConstraints to be applied to insert/update requests 
#17 Support "group" as an object
#18 CreateOrUpdateBuilder
#19 Backend support for batch updates of a single entity
#20 IEncoderService to return Encoder instead of DataResponse
#21 SelectBuilder.withEntity - rename to SelectBuilder.canRead.
#22 SenchaAdapter with Incoming id filter
#23 Refactor EntityConfig and friends into 'constraints'
#24 LinkRestAdapter - a generic LR extension mechanism

Release 1.2 2014-08-01

#8 EntityConfig API improvements 
#10 Support for char PK
#11 Refactoring: rename NoRolesEntityAuthorizationEncoderFilter to EntityEncoderFilter
#12 Add 'SelectBuilder.selectOne' method
#13 'filter' processor improvements