@@ -1,9 +1,21 @@
 package com.nhl.link.rest.runtime.adapter.sencha;
 
+import static org.apache.cayenne.exp.ExpressionFactory.expFalse;
+import static org.apache.cayenne.exp.ExpressionFactory.greaterExp;
+import static org.apache.cayenne.exp.ExpressionFactory.greaterOrEqualExp;
+import static org.apache.cayenne.exp.ExpressionFactory.inExp;
+import static org.apache.cayenne.exp.ExpressionFactory.lessExp;
+import static org.apache.cayenne.exp.ExpressionFactory.lessOrEqualExp;
+import static org.apache.cayenne.exp.ExpressionFactory.likeIgnoreCaseExp;
+import static org.apache.cayenne.exp.ExpressionFactory.matchExp;
+import static org.apache.cayenne.exp.ExpressionFactory.noMatchExp;
+
+import java.util.ArrayList;
+import java.util.List;
+
 import javax.ws.rs.core.Response.Status;
 
 import org.apache.cayenne.exp.Expression;
-import org.apache.cayenne.exp.ExpressionFactory;
 import org.apache.cayenne.exp.parser.ASTObjPath;
 import org.apache.cayenne.map.ObjEntity;
 
@@ -21,6 +33,7 @@ class FilterProcessor {
 	private static final String EXACT_MATCH = "exactMatch";
 	private static final String PROPERTY = "property";
 	private static final String VALUE = "value";
+	private static final String OPERATOR = "operator";
 
 	private IJacksonService jsonParser;
 	private IPathCache pathCache;
@@ -53,41 +66,109 @@ class FilterProcessor {
 
 			String property = propertyNode.asText();
 
-			Object valueUnescaped = extractValue(valueNode);
+			Object value = extractValue(valueNode);
 
+			// note that 'exactMatch' is ignored everywhere but in a like
+			// expression
 			boolean exactMatch = false;
 			JsonNode exactMatchNode = filterNode.get(EXACT_MATCH);
 			if (exactMatchNode != null) {
 				exactMatch = exactMatchNode.asBoolean();
 			}
 
+			JsonNode operatorNode = filterNode.get(OPERATOR);
+			String operator = (operatorNode != null) ? operatorNode.asText() : "like";
+
 			Expression qualifier;
-			if (valueUnescaped == null) {
-				qualifier = ExpressionFactory.matchExp(property, null);
-			} else if (valueUnescaped instanceof Boolean) {
-				qualifier = ExpressionFactory.matchExp(property, valueUnescaped);
-			} else if (exactMatch) {
-				qualifier = ExpressionFactory.matchExp(property, valueUnescaped);
-			} else {
-				checkValueLength((String) valueUnescaped);
-				String value = FilterUtil.escapeValueForLike((String) valueUnescaped) + "%";
-				qualifier = ExpressionFactory.likeIgnoreCaseExp(property, value);
+			switch (operator) {
+			case "like":
+				qualifier = like(property, value, exactMatch);
+				break;
+			case "=":
+				qualifier = eq(property, value);
+				break;
+			case "!=":
+				qualifier = neq(property, value);
+				break;
+			case ">":
+				qualifier = gt(property, value);
+				break;
+			case ">=":
+				qualifier = gte(property, value);
+				break;
+			case "<":
+				qualifier = lt(property, value);
+				break;
+			case "<=":
+				qualifier = lte(property, value);
+				break;
+			case "in":
+				qualifier = in(property, value);
+				break;
+			default:
+				throw new LinkRestException(Status.BAD_REQUEST, "Invalid filter operator: " + operator);
 			}
 
 			// validate property path
-			ObjEntity rootEntity = clientEntity.getCayenneEntity();
-			pathCache.getPathDescriptor(rootEntity, (ASTObjPath) qualifier.getOperand(0));
+			if (qualifier.getOperandCount() == 2) {
+				ObjEntity rootEntity = clientEntity.getCayenneEntity();
+				pathCache.getPathDescriptor(rootEntity, (ASTObjPath) qualifier.getOperand(0));
+			}
 
 			clientEntity.andQualifier(qualifier);
 		}
+	}
+
+	Expression eq(String property, Object value) {
+		return matchExp(property, value);
+	}
+
+	Expression neq(String property, Object value) {
+		return noMatchExp(property, value);
+	}
+
+	Expression like(String property, Object value, boolean exactMatch) {
+		if (value == null || exactMatch || value instanceof Boolean) {
+			return eq(property, value);
+		}
+
+		String string = value.toString();
+		checkValueLength(string);
+		string = FilterUtil.escapeValueForLike(string) + "%";
+		return likeIgnoreCaseExp(property, string);
+	}
+
+	Expression gt(String property, Object value) {
+		return (value == null) ? expFalse() : greaterExp(property, value);
+	}
+
+	Expression gte(String property, Object value) {
+		return (value == null) ? expFalse() : greaterOrEqualExp(property, value);
+	}
+
+	Expression lt(String property, Object value) {
+		return (value == null) ? expFalse() : lessExp(property, value);
+	}
+
+	Expression lte(String property, Object value) {
+		return (value == null) ? expFalse() : lessOrEqualExp(property, value);
+	}
+
+	@SuppressWarnings("rawtypes")
+	Expression in(String property, Object value) {
+
+		if (!(value instanceof List)) {
+			return eq(property, value);
+		}
+
+		return inExp(property, (List) value);
 	}
 
 	private static Object extractValue(JsonNode valueNode) {
 		JsonToken type = valueNode.asToken();
 
 		// ExtJS converts everything to String except for NULL and booleans. So
-		// follow the
-		// same logic here...
+		// follow the same logic here...
 		// (http://docs.sencha.com/extjs/4.1.2/source/Filter.html#Ext-util-Filter)
 		switch (type) {
 		case VALUE_NULL:
@@ -100,9 +181,21 @@ class FilterProcessor {
 			return valueNode.asInt();
 		case VALUE_NUMBER_FLOAT:
 			return valueNode.asDouble();
+		case START_ARRAY:
+			return extractArray(valueNode);
 		default:
 			return valueNode.asText();
 		}
+	}
+
+	private static List<Object> extractArray(JsonNode arrayNode) {
+
+		List<Object> values = new ArrayList<>(arrayNode.size());
+		for (JsonNode value : arrayNode) {
+			values.add(extractValue(value));
+		}
+
+		return values;
 	}
 
 	private void checkValueLength(String value) {
